Fix form button alignement with figma designe

--- a/style.css
+++ b/style.css
@@ -507,4 +507,8 @@ h1 span {
   .email-title {
     display: none;
   }
+
+  .btn-form{
+    margin: 10px;
+  }
 }
